final antidote run

--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -22,7 +22,7 @@ Different definitions of pore sizes can be defined depending on the points where
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.65\textwidth]{figures/2-thermo/pores.pdf}
-  \caption{Illustration of the different pore sizes D$_f$, D$_i$ and D$_{if}$. Note that in some materials D$_{if}$ is equal to D$_i$, when the largest included sphere is also accessible through a free diffusion path. }\label{fgr:pore_size}
+  \caption{Illustration of the different pore sizes D$_f$, D$_i$ and D$_{if}$. Note that in some materials D$_{if}$ is equal to D$_i$ when the largest included sphere is also accessible through a free diffusion path. }\label{fgr:pore_size}
 \end{figure}
 
 To define these pore sizes, it is necessary to first determine the radii of the framework atoms that shape the surrounding pores. These radii can be defined using different methods, with the default mode utilizing the Cambridge Crystallographic Data Centre's (CCDC) radii. This method is widely used in the literature. Additionally, this section introduces another set of radii based on the universal forcefield~\autocite{rappe1992}, which is used for all types of molecular simulations throughout this thesis. The determination of these radii are inspired by an approach developed by Hung et al.\autocite{Hung_2021} The atomic radii correspond to the distance at which the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This definition enables easier comparison with the quantities obtained from molecular simulations. In case of ambiguity, different indices will be used to differentiate between the two methods. For instance, LCD\e{CCDC} corresponds to the standard definition of the LCD that utilizes the CCDC radii when running the Zeo++ software, while the LCD\e{UFF} is defined based on the atomic radii that is dependent on the UFF forcefield. In this chapter, I will mainly use the forcefield-based definition --- the largest cavity diameter denoted LCD\e{UFF} will be predominantly used, and the studies on void fraction and surface areas will also be defined using this set of radii.
@@ -279,7 +279,7 @@ In a GCMC calculation, the previous equation cannot be used as it is, but the ad
 where $E$ corresponds to the total energy of the adsorption system and $N$ the total number of adsorbates at every step of the simulation. Note that this equation remains only valid for $N\gg1$, as the first step of the derivation is based on a first order Taylor expansion $\langle E \rangle\left(\langle N \rangle+1\right)-\langle E \rangle\left(\langle N \rangle\right) \simeq \frac{\partial \langle E \rangle}{\partial \langle N \rangle}$. 
 
 
-On the other hand, at infinite dilution, the equation~\ref{eq:ads_enthalpy} can be rederived using a similar approach (equation~\ref{eq:enthalpy_gen_def}), where for $N\rightarrow0$ the adsorption enthalpy is now expressed as $\Delta H\e{ads} = \langle E \rangle(1)-\langle E \rangle(0) - RT$. The average energy with one adsorbate minus the average energy without adsorbate corresponds to the average over the whole space of the guest--host interaction energies for one adsorbate particle (the host-host energy being encompassed in $\langle E \rangle(0)$). This expression of the adsorption enthalpy echoes with the one derived in equation~\ref{eq:ads_enthalpy}.
+On the other hand, at infinite dilution, the equation~\ref{eq:ads_enthalpy} can be retrieved using a similar approach (equation~\ref{eq:enthalpy_gen_def}), where for $N\rightarrow0$ the adsorption enthalpy is now expressed as $\Delta H\e{ads} = \langle E \rangle(1)-\langle E \rangle(0) - RT$. The average energy with one adsorbate minus the average energy without adsorbate corresponds to the average over the whole space of the guest--host interaction energies for one adsorbate particle (the host-host energy being encompassed in $\langle E \rangle(0)$). This expression of the adsorption enthalpy echoes with the one derived in equation~\ref{eq:ads_enthalpy}.
 
 \subsubsection{Exchange entropy}
 
@@ -426,7 +426,7 @@ The distribution of thermodynamic properties of materials with favorable thermod
     \caption{For 8\,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair plots of $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ and $\Delta\e{ads}H\ex{Kr}\e{0}$ (the enthalpies are in~\si{\kilo\joule\per\mol}) in the off-diagonal subplots and the distribution of each quantity is on the diagonal.}\label{fgr:histo_H}
   \end{figure}
 
-In terms of Henry constants, a diverse range of behaviors is observed, with $K\ex{Xe}$ ranging from $2.6\,10^{-7}$ to $7.9\,10^{-1}$~\si{\milli\mole\per\gram\per\pascal}, and $K\ex{Kr}$ ranging from $1.3\,10^{-7}$ to $5.1\,10^{-3}$~\si{\milli\mole\per\gram\per\pascal}.  Additionally, there is a statistical trend indicating that a high affinity for xenon typically translates into a relatively high affinity for krypton. This general trend is observed for noble gases, where the adsorption sites lack strong specificity. To delve deeper into the thermodynamic aspects underlying this wide diversity in behavior, the enthalpies involved were plotted in Figure~\ref{fgr:histo_H}.
+In terms of Henry constants, a diverse range of behaviors are observed, with $K\ex{Xe}$ ranging from $2.6\,10^{-7}$ to $7.9\,10^{-1}$~\si{\milli\mole\per\gram\per\pascal}, and $K\ex{Kr}$ ranging from $1.3\,10^{-7}$ to $5.1\,10^{-3}$~\si{\milli\mole\per\gram\per\pascal}.  Additionally, there is a statistical trend indicating that a high affinity for xenon typically translates into a relatively high affinity for krypton. This general trend is observed for noble gases, where the adsorption sites lack strong specificity. To delve deeper into the thermodynamic aspects underlying this wide diversity in behavior, the enthalpies involved were plotted in Figure~\ref{fgr:histo_H}.
 
 The low-loading adsorption enthalpy of xenon ($\Delta\e{ads}H\ex{Xe}\e{0}$) is strongly correlated with that of krypton ($\Delta\e{ads}H\ex{Kr}\e{0}$), which aligns with the correlation observed between their respective Henry constants. This suggests the involvement of a rather generic physisorption mechanism in the majority of materials, where the host--adsorbate affinities are primarily determined by the enthalpy. The selectivity of Xe/Kr selectivity is not driven significantly by the xenon or krypton adsorption enthalpy alone (both exhibit weak correlation with selectivity), but rather by their difference, $\Delta\e{exc}H\e{0}$, which shows a strong correlation with $\log(s\e{0})$. This finding is further supported by the lack of correlation between selectivity and adsorption entropies (\emph{cf.} Figure~\ref{fgr:SI:HS_0_log}), indicating that the separation is predominantly enthalpic in nature, and any dispersion in the correlation between selectivity $\log(s\e{0})$ and $\Delta\e{exc}H\e{0}$ is influenced by entropy.
 
@@ -462,7 +462,7 @@ Upon further analysis of Figure~\ref{fgr:henry_enthalpy}, it becomes apparent th
   \caption{Comparison between the Xe Henry constant and Xe adsorption enthalpy labeled by categories of LCD\e{UFF} values for the CoRE MOF structures.}\label{fgr:henry_enthalpy}
 \end{figure}
 
-In the analysis of the influence of the pore size and void fraction on the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ (Figure~\ref{fgr:entropy_geometry}), a clear relationship between entropy and pore size, represented by the LCD\e{UFF}\footnote[1]{This corresponds to the diameter of the largest included sphere defined by UFF-based atom radii}, is observed. Larger pores tend to exhibit higher entropy, likely due to the confinement effect of the pore --- a small pore limits the available adsorption positions for xenon, while a larger pore provides more sites for adsorption. A similar trend is observed for pore volume, represented by the void fraction here. A weak linear correlation exists between the void fraction (in log-scale) and the adsorption entropic term of xenon. However, it is important to note that these simple geometric descriptors may not capture the entire complexity of the entropic behavior, particularly for larger pore sizes. Other effects that can contribute to the entropic effects include the shape of the channel and cavities (e.g.,\ tortuosity) or the overall distribution of pore sizes that cannot be adequately captured by the LCD\e{UFF}.
+In the analysis of the influence of the pore size and void fraction on the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ (Figure~\ref{fgr:entropy_geometry}), a clear relationship between entropy and pore size, represented by the LCD\e{UFF}\footnote[1]{This corresponds to the diameter of the largest included sphere defined by UFF-based atom radii} is observed. Larger pores tend to exhibit higher entropy, likely due to the confinement effect of the pore --- a small pore limits the available adsorption positions for xenon, while a larger pore provides more sites for adsorption. A similar trend is observed for pore volume, represented by the void fraction here. A weak linear correlation exists between the void fraction (in log-scale) and the adsorption entropic term of xenon. However, it is important to note that these simple geometric descriptors may not capture the entire complexity of the entropic behavior, particularly for larger pore sizes. Other effects that can contribute to the entropic effects include the shape of the channel and cavities (e.g.,\ tortuosity) or the overall distribution of pore sizes that cannot be adequately captured by the LCD\e{UFF}.
 
 \begin{figure}[ht]
   \centering
@@ -531,7 +531,7 @@ Examining Figure~\ref{fgr:SI:dist1} for the selectivity at ambient pressure, sim
     \caption{Distribution of the enthalpy $\Delta\e{exc}H\e{1}$ and entropic term $T\Delta\e{exc}S\e{1}$ of exchange at ambient pressure on the 630 most selective structures.}\label{fgr:SI:dist1}
 \end{figure*}
 
-Figure~\ref{fgr:HSplot_1} represents a scatterplot of the exchange entropy at $P = 1$\,atm $\Delta\e{exc}S\e{1}$ against the exchange enthalpy at ambient pressure $\Delta\e{exc}H\e{1}$. The points are color-coded according to the low-pressure selectivity $s\e{0}$ to compare it with the Fig.~\ref{fgr:HSplot_0}. In comparison to the iso-selectivity $s\e{1}$ straight parallel lines (\emph{cf.}~Figure~\ref{fgr:SI:HS_split}), it can be observed that many materials with high $s\e{0}$ have lower $s\e{1}$, as indicated by a migration of points to the right of the plot. This shift is thus mainly due to a higher (less favorable) exchange enthalpy, implying that enthalpy plays a crucial role in determining selectivity at higher pressures.
+Figure~\ref{fgr:HSplot_1} represents a scatterplot of the exchange entropy at $P = 1$\,atm $\Delta\e{exc}S\e{1}$ against the exchange enthalpy at ambient pressure $\Delta\e{exc}H\e{1}$. The points are color-coded according to the low-pressure selectivity $s\e{0}$ to compare it with the Figure~\ref{fgr:HSplot_0}. In comparison to the iso-selectivity $s\e{1}$ straight parallel lines (\emph{cf.}~Figure~\ref{fgr:SI:HS_split}), it can be observed that many materials with high $s\e{0}$ have lower $s\e{1}$, as indicated by a migration of points to the right of the plot. This shift is thus mainly due to a higher (less favorable) exchange enthalpy, implying that enthalpy plays a crucial role in determining selectivity at higher pressures.
 
 \begin{figure}[ht]
   \centering
