--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -674,7 +674,7 @@ Figure~\ref{fgr:enthalpy_skew_kurt} further illustrate the range of selectivity 
 
 To conclude this overview of the thermodynamic/energetic descriptors derived from the newly developed grid sampling, a more uniformly weighted energy distribution will be examined. The significantly higher energy values corresponding to the overlap with a framework atom are naturally excluded by the sampling process. In this case, a threshold value of $100$~\si{\kilo\joule\per\mole} has been used for the grid sampling, defining a very large overlap range. Energy points below this threshold are considered in the distribution, representing the adsorbable sites (no overlap) that are weighted based on their occupancy of the void volume.
 
-The mean value and standard deviation of this distribution have been analyzed. The mean value shows a weak correlation with the exchange Gibbs energy at ambient pressure. However, the correlation disappears for materials with larger pores, where a more diverse range of energy values is present. The lower mean value in these cases can be attributed to the larger void fraction, resulting in increased weight on the more negative values, but this does not indicate the presence of highly attractive sites, as no Boltzmann weight is applied  --- the exchange free energy does not follow the same trend and returns to more positive values. It is worth mentioning that the values are generally very high due to the use of an energy threshold value of $100$~\si{\kilo\joule\per\mole}, resulting in many points falling within zero to this threshold range, thereby shifting the mean towards these values. Consequently, the statistical analysis of this distribution was not extended beyond the standard deviation. A more refined distribution design should be considered to focus on the negative values, such as lowering the threshold or using a less skewed Boltzmann averaging method (e.g., averaging at higher temperature).
+The mean value and standard deviation of this distribution have been analyzed. The mean value shows a weak correlation with the exchange Gibbs energy at ambient pressure. However, the correlation disappears for materials with larger pores, where a more diverse range of energy values are present. The lower mean value in these cases can be attributed to the larger void fraction, resulting in increased weight on the more negative values, but this does not indicate the presence of highly attractive sites, as no Boltzmann weight is applied  --- the exchange free energy does not follow the same trend and returns to more positive values. It is worth mentioning that the values are generally very high due to the use of an energy threshold value of $100$~\si{\kilo\joule\per\mole}, resulting in many points falling within zero to this threshold range, thereby shifting the mean towards these values. Consequently, the statistical analysis of this distribution was not extended beyond the standard deviation. A more refined distribution design should be considered to focus on the negative values, such as lowering the threshold or using a less skewed Boltzmann averaging method (e.g., averaging at higher temperature).
 
 \begin{figure}[ht]
   \centering
