--- a/4-ml.tex
+++ b/4-ml.tex
@@ -222,7 +222,7 @@ where $\hat{y}_i$ is a derivation variable describing the ensemble tree predicti
 \begin{equation}
   \Phi_b = \Phi_{b-1} + \eta \phi_{b}
 \end{equation}
-where $\eta$ is the learning rate or shrinkage, as introduced by Friedman in stochastic gradient boosting, to slow down the learning process and mitigate overfitting.\autocite{Friedman2002} In a steepest descent step, the values of this learning rate $\eta$ minimize the risk function $\mathcal{R}(\Phi_{b-1} + \eta \phi_{b})$ associated with the output model $\Phi_b$. If $b=1$, the first estimator $\Phi_1$ is simply a constant function that minimizes the risk over the training set $\Phi_1(\mathbf{x}) = \underset{c\in \mathbb{R}}{\text{arg min}} \sum_{i=1}^{N}\mathcal{L}(y_i,c)$. For a quadratic loss function, this constant corresponds simply to the average of the $y_i$ values over the training set.
+where $\eta$ is the learning rate or shrinkage, as introduced by Friedman in stochastic gradient boosting, to slow down the learning process and mitigate overfitting.\autocite{Friedman2002} In the steepest descent step, the values of this learning rate $\eta$ minimize the risk function $\mathcal{R}(\Phi_{b-1} + \eta \phi_{b})$ associated with the output model $\Phi_b$. If $b=1$, the first estimator $\Phi_1$ is simply a constant function that minimizes the risk over the training set $\Phi_1(\mathbf{x}) = \underset{c\in \mathbb{R}}{\text{arg min}} \sum_{i=1}^{N}\mathcal{L}(y_i,c)$. For a quadratic loss function, this constant corresponds simply to the average of the $y_i$ values over the training set.
 
 In the particular case of a quadratic loss $\mathcal{L}\e{SE} =\tfrac{1}{2} {\left(y_i - f(\mathbf{x}_i)\right)}^2$ that is used in this chapter, the gradient boosting algorithm can be simply broken down into the three steps below:\autocite{Friedman2002}
 \begin{enumerate}
@@ -314,7 +314,7 @@ To achieve this, a logarithmic transform of the selectivity will be considered i
 
 This methodology is tested on a set of realistic MOFs by considering the 12\,020 all-solvent removed (ASR) structures of the CoRE MOF 2019 database\autocite{Chung_2019}. After removing the disordered and the non-MOF structures as well as the ones with a large unit cell volume of \SI{20}{\cubic\nano\meter}, the database is reduced to a set of 9,748 structures. Then, with the string information given by the Zeo++ software\autocite{zeopp_Willems2012} this number is reduced to 9\,177 by removing the structures that are not tridimensional, where solvents are still detected (wrongly classified in ``all solvent removed''), or where the metal is radioactive or fissile (e.g., Pu-MOF \texttt{TAGCIP}\autocite{Diwu_2010}, Np-MOF \texttt{KASHUK}\autocite{Martin_2017}, U-MOF \texttt{ABETAE}\autocite{Jouffret_2011} or Th-MOF \texttt{ASAMUE}\autocite{Liang_2016}) --- this can be a source of risks in a nuclear waste processing plant. Furthermore, a condition on the largest cavity diameter (LCD) is added to keep only the structures with pore sizes allowing the adsorption of xenon: this is the case for 8\,523 structures with an LCD higher than \SI{4}{\angstrom} (approximately the size of a xenon molecule). This is equivalent to removing the structures with very unfavorable adsorption enthalpies, that are not promising for our adsorption-based separation.
 
-Then, the descriptors summarized below (and fully detailed in Tables~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}) were calculated on this restrained dataset. At this stage, 140 structures failed to be calculated in GCMC (the CPU used are limited to 3.75 GB, and for some materials the RASPA2 grid exceeds this memory limitation) and 83 have a zero value for the standard deviation of the pore distribution (skewness and kurtosis go to infinite and cannot be defined). A final dataset of 8,300 structures was therefore used to perform our ML-assisted method of screening the Xe/Kr adsorption selectivity. Based on this final set, {20\%} were randomly used for the test set and {80\%} were used to train our model. The goal is to learn from the training set a relationship between the descriptors and the target ambient-pressure selectivity in order to evaluate the performance on the test set. A CSV file of training and test sets can be found in the data availability section.
+Then, the descriptors summarized below (and fully detailed in Tables~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}) were calculated on this restrained dataset. At this stage, 140 structures failed to be calculated in GCMC (the CPU used is limited to 3.75 GB, and for some materials the RASPA2 grid exceeds this memory limitation) and 83 have a zero value for the standard deviation of the pore distribution (skewness and kurtosis go to infinite and cannot be defined). A final dataset of 8,300 structures was therefore used to perform our ML-assisted method of screening the Xe/Kr adsorption selectivity. Based on this final set, {20\%} were randomly used for the test set and {80\%} were used to train our model. The goal is to learn from the training set a relationship between the descriptors and the target ambient-pressure selectivity in order to evaluate the performance on the test set. A CSV file of training and test sets can be found in the data availability section.
 
 \subsection{Feature engineering}
 
@@ -332,7 +332,7 @@ Given the objective of predicting the difference between low-pressure selectivit
 
 To generate a histogram of pore sizes (or pore size distribution, PSD), Monte Carlo steps are used to measure the frequency of every accessible pore sizes binned by \SI{0.1}{\angstrom}.\autocite{poresize_Pinheiro2013} This histogram can then be used to generate descriptors based on statistical parameters that describe the overall location, dispersion, shape, and modality of the distribution. In addition to the mean and standard deviation of the distribution, two additional moments were introduced: the skewness ($\gamma$), which corresponds to the third standardized moment and measures the asymmetry of a distribution; and the kurtosis ($k$), being the fourth standardized moment, measures the relative weight of the distribution's tails. Recognizing the importance of characterizing the number of different pore sizes that are likely to have contributed to the observed selectivity drop, this study tried find a simple descriptor for measuring the number of modes in the distribution. The Sarle's bimodality coefficient, BC $= (\gamma^2 +1)/k$, provides a simple quantification of the extent to which the distribution deviates from unimodality by considering only skewness and kurtosis\autocite{Tarba_2022}.
 
-Finally, to assess the diversity of pores, an effective number $n\e{eff} = N^2/\sum n_i^2$ of pore sizes was introduced, where $N$ represents the total number of points in the histogram and $n_i$ the number of points associated with the $i^\text{th}$ bin. This number bears resemblance to a statistical measure widely used in other scientific domains. In political science, it is employed to measure the effective number of political parties,~\autocite{neffposci_Laakso1979} while in ecology, the inverse Simpson's index evaluates the species diversity in an ecosystem,\autocite{neffbio_Simpson1949}. Similarly, in quantum physics, the inverse participation number measures the degree of localization of a wave-function.\autocite{neffphys_Kramer1993} This effective number of pore sizes provides an indication of the diversity of pore sizes (considering a binning of \SI{0.1}{\angstrom}). A highly effective number suggests that multiple pore sizes are well represented in the structure. Thus, this descriptor provides insight into the scattering of pore sizes within the distribution.
+Finally, to assess the diversity of pores, an effective number $n\e{eff} = N^2/\sum n_i^2$ of pore sizes was introduced, where $N$ represents the total number of points in the histogram and $n_i$ the number of points associated with the $i^\text{th}$ bin. This number bears resemblance to a statistical measure widely used in other scientific domains. In political science, it is employed to measure the effective number of political parties,~\autocite{neffposci_Laakso1979} while in ecology, the inverse Simpson's index evaluates the species diversity in an ecosystem\autocite{neffbio_Simpson1949}. Similarly, in quantum physics, the inverse participation number measures the degree of localization of a wave-function.\autocite{neffphys_Kramer1993} This effective number of pore sizes provides an indication of the diversity of pore sizes (considering a binning of \SI{0.1}{\angstrom}). A highly effective number suggests that multiple pore sizes are well represented in the structure. Thus, this descriptor provides insight into the scattering of pore sizes within the distribution.
 All these descriptors contain valuable information regarding the form of the PSD required to understand the loading and selectivity situation in the framework near saturation uptake, which is crucial to predict the ambient-pressure selectivity.
 
 \subsubsection{Grid-based and geometrical descriptors}
@@ -613,7 +613,7 @@ To apply the previous analysis in practice, archetypal structures and their sele
 The second structure \texttt{BIMDIL} is also among the most selective with a selectivity at low pressure of $41.0$, while maintaining it to $41.2$ at ambient pressure. The stability of the selectivity is accurately predicted by assigning a value of $40.0$. Consequently, the first contribution of "G\_0" is one of the most negative contributions, establishing a baseline of $-2.4$ for subsequent contributions. Although the contributions of "G\_900K" and "G\_900K", they continue to decrease the predicted selectivity value. The joint contributions of other descriptors will discriminate between the two structures and determine why this particular structure will maintain its selectivity. In contrast to the previously analyzed structure, this structure has a "delta\_pore" value below \SI{0.3}{\angstrom}, explaining its negative Shapley value in the prediction of this study. The contribution of "delta\_G0\_298\_900", which had only a slightly negative impact on the other structure, now plays a significant role as it falls within the range of $4$ to \SI{6}{\kilo\joule\per\mole} (Figure~\ref{fgr:contribution}). Additionally, it is observed that "pore\_dist\_std" is below the threshold, in contrast to the previous structure where it was above the threshold. Furthermore, the other contributions align with the rules suggested by the SHAP dependence plots, and no apparent anomalies are detected. The combined effects of all the descriptors result in a lower free energy value, leading to the conservation of selectivity at higher pressure. The set of descriptor values for this structure significantly differs from the previous one, with many values contributing to opposite domains. This disparity allows the model to differentiate between highly selective structures and identify those that will maintain their selectivity at higher pressure.
 
 %% conclusions + sum-up of some qualitative rules
-These two examples provide a deeper understanding of how the model distinguishes structures that lose selectivity at higher pressure from those that do not. Most dependence plots exhibit a strong association between descriptors and their effects, with outliers being rare enough to comprehend the internal logic of the model. As previously discussed, the first three descriptors establish a baseline for the observed selectivity drop with limited information. Subsequently, the contributions of other descriptors can be positive, negligible, or negative depending on the domain where the values of the descriptor lie. For instance, the average pore size and largest cavity diameter need to be within specific ranges to maximize the likelihood of maintaining selectivity at higher pressure, aligning with previous studies emphasizing the importance of pore sizes similar to xenon for Xe/Kr separation. The difference in entropy between ambient temperature and \SI{900}{\kelvin} is a surprising descriptor that separates selective structures based on whether its value falls within a specified range. Similarly, the difference in void fraction occupied by xenon and krypton is intriguing as it impacts selectivity differently depending on whether the structure is highly selective or not, with the contribution being more or less proportional to its value. Various methods of measuring the disparity of the PSD and interaction energy distribution play a key role in identifying highly selective structures (indicated in blue on the dependence plot in Figure~\ref{fgr:pdp_selection}) that either maintain or decrease in selectivity. These methods include calculating the difference between the average pore size and the LCD, as well as the standard deviation of the PSD or Boltzmann-weighted energy distribution, which exhibit distinct behaviors based on the domain in which the value lies. The SHAP dependence plots provide valuable insights into the mechanisms underlying the ML model presented in this thesis and, more broadly, shed light on the understanding of Xe/Kr separation origins.
+These two examples provide a deeper understanding of how the model distinguishes structures that lose selectivity at higher pressure from those that do not. Most dependence plots exhibit a strong association between descriptors and their effects, with outliers being rare enough to comprehend the internal logic of the model. As previously discussed, the first three descriptors establish a baseline for the observed selectivity drop with limited information. Subsequently, the contributions of other descriptors can be positive, negligible, or negative depending on the domain where the values of the descriptor lie. For instance, the average pore size and largest cavity diameter need to be within specific ranges to maximize the likelihood of maintaining selectivity at higher pressure, aligning with previous studies emphasizing the importance of pore sizes similar to xenon for Xe/Kr separation. The difference in entropy between ambient temperature and \SI{900}{\kelvin} is a surprising descriptor that separates selective structures based on whether its value falls within a specified range. Similarly, the difference in the void fraction occupied by xenon and krypton is intriguing as it impacts selectivity differently depending on whether the structure is highly selective or not, with the contribution being more or less proportional to its value. Various methods of measuring the disparity of the PSD and interaction energy distribution play a key role in identifying highly selective structures (indicated in blue on the dependence plot in Figure~\ref{fgr:pdp_selection}) that either maintain or decrease in selectivity. These methods include calculating the difference between the average pore size and the LCD, as well as the standard deviation of the PSD or Boltzmann-weighted energy distribution, which exhibit distinct behaviors based on the domain in which the value lies. The SHAP dependence plots provide valuable insights into the mechanisms underlying the ML model presented in this thesis and, more broadly, shed light on the understanding of Xe/Kr separation origins.
 
 \section{Beyond thermodynamic considerations}
 
