--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -181,7 +181,7 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). We removed the 291 structures with several channels, because in an infinite dilution MD simulation, we can only probe one channel at a time. For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all simulations are fully completed at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 4,880 MSD data are exploitable (according to the condition: R$^2>0.9$) even if the total 500 million steps are not always completed, while only 3,793 structures are completely finished. Finally, we end up with 4,873 structures (the difference correspond to energy barrier values that could not be determined).
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). We removed the 291 structures with several channels, because in an infinite dilution MD simulation, we can only probe one channel at a time. For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all simulations are fully completed at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 4,880 MSD data are exploitable (according to the condition: R$^2>0.9$) even if the total 500 million steps are not always completed, while only 3,793 structures are completely finished. Finally, we end up with 4,873 structures (the difference corresponds to energy barrier values that could not be determined).
 
 To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) are sequentially analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales is chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ are removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit out of the 2--47\si{\ns} and 50--950~\si{\ns} timescales.
 
