--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -89,7 +89,7 @@ Ce modèle donne de très bons résultats de prédiction tout en étant bien plu
 
 Le second objectif de cette étude a été de mieux quantifier les origines de la différence observée entre la sélectivité à basse pression et celle à haute pression. Pour cela, le modèle ML a été interprété en utilisant des modèles d'interprétabilité comme les valeurs de Shapley. Ces résultats corroborent les deux causes principales attribuées d'une part à la diversité de taille et de nature des pores, et d'autre part à la réorganisation des adsorbats en espace confiné à la limite de la saturation des pores. Des facteurs quantitatifs expliquant ces changements de sélectivités ont ainsi été établis : les moyennes énergétiques à \SI{900}{\kelvin}, des mesures statistiques sur la diversité des énergies d'interaction, mais aussi des tailles de pore. 
 
-Le modèle final peut ensuite être utilisé pour accélérer les méthodes de criblage actuelles. Par exemple, le criblage peut consister à mettre de côtés des structures peu prometteuses en se basant sur des critères purement géométriques, puis des critères énergétiques calculés par l'algorithme de GrAED peuvent s'ajouter, pour enfin utilisé le modèle ML pour avoir une compréhension plus fine des performances de séparation. Cette méthode est pour l'instant testée et validée pour le cas de l'évaluation de la sélectivité Xe/Kr à pression ambiante, mais il peut s'étendre à des adsorbats d'une toute autre nature. 
+Le modèle final peut ensuite être utilisé pour accélérer les méthodes de criblage actuelles. Par exemple, le criblage peut consister à mettre de côté des structures peu prometteuses en se basant sur des critères purement géométriques, puis des critères énergétiques calculés par l'algorithme de GrAED peuvent s'ajouter, pour enfin utiliser le modèle ML pour avoir une compréhension plus fine des performances de séparation. Cette méthode est pour l'instant testée et validée pour le cas de l'évaluation de la sélectivité Xe/Kr à pression ambiante, mais il peut s'étendre à des adsorbats d'une tout autre nature. 
 
 Au-delà des effets purement thermodynamiques traités dans cette partie du résumé, mais aussi dans les chapitres 2, 3 et 4 de ma thèse, il existe également des effets cinétiques liés au transport des molécules d'adsorbat à l'intérieur des pores et des canaux du matériau.
 
